--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,21 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: rgb(77, 113, 221);
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     overflow-y: none;
+    background-image: url("../src/bg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .main{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 4rem;
 }
 
 .container{
@@ -29,13 +31,18 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
+    width: 20rem;
+    padding: 1rem;
     gap: 1rem;
     background-color: black;
     color: white;
     border-radius: 5px;
     border: solid 2px white;
     margin-top: 4rem;
+}
+
+.container2 h1{
+    margin-top: 0;
 }
 
 .task{
