--- a/public/style.css
+++ b/public/style.css
@@ -6,21 +6,79 @@ body{
     justify-content: center;
     height: 100vh;
     overflow-y: none;
-    background-image: url("../src/bg.jpg");
+    background-image: url("bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .main{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 4rem;
 }
 
-.container{
+.main h1{
+    font-size: 48px;
+    color: white;
+    margin-bottom: 0;
+}
+
+.main span{
+    color: red;
+}
+
+
+.main-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+}
+
+
+.tasklist{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.tasklist input{
+    padding: .5rem;
+    border: none;
+    border-radius: 10px;
+}
+
+.tasklist button{
+    font-size: 24px;
+    font-weight: 700;
+    padding: .5rem 2rem;
+}
+
+.task-container{
+    background: black;
+    border-radius: 10px;
+    border: 2px solid rgb(255, 255, 255);
+    padding: 2rem 1rem;
+    height: 20rem;
+    width: 14rem;
+    color: white;
+    font-size: 20px;
+}
+
+.input-container{
+    display: flex;
+    gap: 1rem;
+    color: white;
+}
+.container{
+    display: flex;
+    flex-direction: column;  
     align-items: center;
     justify-content: center;
     gap: 2rem;
@@ -51,10 +109,10 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 3rem 4rem;
-    border: 2px solid black;
+    padding: 2rem 3rem;
+    border: 2px solid rgb(255, 255, 255);
     border-radius: 5px;
-    background-color: rgb(25, 25, 103);
+    background-color: rgb(15, 34, 142);
 }
 
 .task p{
